<resources>
    <string name="app_name">WatchMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_adress">Email adress</string>
    <string name="most_popular">Popular</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV series</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="comment">Comment</string>
    <string name="list_view">List</string>
    <string name="grid_view">Grid</string>
    <string name="catalog">Catalog</string>
    <string name="comments">Comments:</string>
</resources>
