<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginScreen"
    android:background="@drawable/login_background"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:gravity="center"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/input_login_email_adress"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/login_logo"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:textSize="21dp" />

    <EditText
        android:id="@+id/input_login_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/input_login_email_adress"
        android:layout_alignStart="@+id/input_login_email_adress"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textSize="21dp" />

    <Button
        android:id="@+id/confirm_login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/input_login_password"
        android:layout_alignStart="@+id/input_login_password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape_rounded"
        android:text="@string/login" />

    <Button
        android:id="@+id/confirm_registration"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/confirm_login"
        android:layout_alignStart="@+id/confirm_login"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape_rounded"
        android:text="@string/register" />

</RelativeLayout>